Added affiliation and keywords

--- a/Article.tex
+++ b/Article.tex
@@ -12,7 +12,7 @@
 \newcommand{\umsq}{$\upmu$m$^2$} % µm2
 \newcommand{\ums}{$\upmu$m$^2$.s$^{-1}$} % µm2.s-1
 
-% Please give the surname of the lead author for the running footer
+% Surname of the lead author for the running footer
 \leadauthor{Thédié} 
 
 \begin{document}
@@ -20,22 +20,21 @@
 \title{Article title}
 \shorttitle{}
 
-% Use letters for affiliations, numbers to show equal authorship (if applicable) and to indicate the corresponding author
 \author[1]{Daniel Thédié}
 \author[1]{Lorna McLaren}
 \author[1]{Meriem El Karoui}
 
 
-\affil[1]{University of Edinburgh, ..., United Kingdom}
+\affil[1]{Institute of Cell Biology, University of Edinburgh, Edinburgh, UK}
 
 \maketitle
 
 \begin{abstract}
-Abstract text
-\end {abstract}
+Abstract text will come here.
+\end{abstract}
 
 \begin{keywords}
-DNA repair | RecBCD | bla | bla
+DNA repair | RecBCD | Imaging | \emph{in-vivo}
 \end{keywords}
 
 \begin{corrauthor}
