--- a/Article.tex
+++ b/Article.tex
@@ -17,7 +17,7 @@
 
 \begin{document}
 
-\title{Article title}
+\title{\emph{In-vivo} imaging of the repair of ciprofloxacin-induced DNA double-strand breaks}
 \shorttitle{}
 
 \author[1]{Daniel Thédié}
