Added RecBCD references

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -173,3 +173,191 @@
    volume = {81},
    year = {2021},
 }
+@article{Krasin1977,
+   abstract = {A method was devised for extracting, from cells of Escherichia coli K12, DNA molecules which sedimented on neutral sucrose gradients as would be expected for free DNA molecules approaching the genome in size. Gamma ray irradiation of oxygenated cells produced 0.20 DNA double-strand breaks per kilorad per 109 daltons. Incubation after irradiation of cells grown in K medium, with four to five genomes per cell, showed repair of the double-strand breaks. No repair of double-strand breaks was found in cells grown in aspartate medium, with only 1.3 genomes per cell, although DNA single-strand breaks were still efficiently repaired. Cells which were recA- or recA- recB- also did not repair double-strand breaks. These results suggest that repair of DNA double-strand breaks may occur by a recombinational event involving another DNA double helix with the same base sequence. © 1977.},
+   author = {Frank Krasin and Franklin Hutchinson},
+   doi = {10.1016/0022-2836(77)90120-6},
+   issn = {0022-2836},
+   issue = {1},
+   journal = {Journal of Molecular Biology},
+   month = {10},
+   pages = {81-98},
+   pmid = {338918},
+   publisher = {Academic Press},
+   title = {Repair of DNA double-strand breaks in Escherichia coli, which requires recA function and the presence of a duplicate genome},
+   volume = {116},
+   year = {1977},
+}
+@article{Dillingham2008,
+   abstract = {The RecBCD enzyme of Escherichia coli is a helicase-nuclease that initiates the repair of double-stranded DNA breaks by homologous recombination. It also degrades linear double-stranded DNA, protecting the bacteria from phages and extraneous chromosomal DNA. The RecBCD enzyme is, however, regulated by a cis-acting DNA sequence known as Chi (crossover hotspot instigator) that activates its recombination-promoting functions. Interaction with Chi causes an attenuation of the RecBCD enzyme's vigorous nuclease activity, switches the polarity of the attenuated nuclease activity to the 5' strand, changes the operation of its motor subunits, and instructs the enzyme to begin loading the RecA protein onto the resultant Chi-containing single-stranded DNA. This enzyme is a prototypical example of a molecular machine: the protein architecture incorporates several autonomous functional domains that interact with each other to produce a complex, sequence-regulated, DNA-processing machine. In this review, we discuss the biochemical mechanism of the RecBCD enzyme with particular emphasis on new developments relating to the enzyme's structure and DNA translocation mechanism.},
+   author = {Mark S. Dillingham and Stephen C. Kowalczykowski},
+   doi = {10.1128/MMBR.00020-08/ASSET/9D8D114D-9A19-4733-ADBA-83CDE2B7A9EE/ASSETS/GRAPHIC/ZMR0040821970017.JPEG},
+   issn = {1092-2172},
+   issue = {4},
+   journal = {Microbiology and Molecular Biology Reviews},
+   month = {12},
+   pages = {642-671},
+   pmid = {19052323},
+   publisher = {American Society for Microbiology},
+   title = {RecBCD Enzyme and the Repair of Double-Stranded DNA Breaks},
+   volume = {72},
+   url = {https://journals.asm.org/doi/10.1128/mmbr.00020-08},
+   year = {2008},
+}
+@article{Kohanski2010,
+   abstract = {Bacterial responses to antibiotics are complex and involve many genetic and biochemical pathways. This Review describes the effects of bactericidal antibiotics on bacterial cellular processes, the associated responses that contribute to killing and recent insights into these processes revealed through the study of biological networks. Antibiotic drug–target interactions, and their respective direct effects, are generally well characterized. By contrast, the bacterial responses to antibiotic drug treatments that contribute to cell death are not as well understood and have proven to be complex as they involve many genetic and biochemical pathways. In this Review, we discuss the multilayered effects of drug–target interactions, including the essential cellular processes that are inhibited by bactericidal antibiotics and the associated cellular response mechanisms that contribute to killing. We also discuss new insights into these mechanisms that have been revealed through the study of biological networks, and describe how these insights, together with related developments in synthetic biology, could be exploited to create new antibacterial therapies.},
+   author = {Michael A. Kohanski and Daniel J. Dwyer and James J. Collins},
+   doi = {10.1038/nrmicro2333},
+   issn = {1740-1534},
+   issue = {6},
+   journal = {Nature Reviews Microbiology 2010 8:6},
+   keywords = {Antibiotics,Bacterial infection,Mechanism of action},
+   month = {5},
+   pages = {423-435},
+   pmid = {20440275},
+   publisher = {Nature Publishing Group},
+   title = {How antibiotics kill bacteria: from targets to networks},
+   volume = {8},
+   url = {https://www.nature.com/articles/nrmicro2333},
+   year = {2010},
+}
+@article{Wiktor2018,
+   abstract = {The formation of 3 single-stranded DNA overhangs is a first and essential step during homology-directed repair of double-stranded breaks (DSB) of DNA, a task that in Escherichia coli is performed by RecBCD. While this protein complex has been well characterized through in vitro single-molecule studies, it has remained elusive how end resection proceeds in the crowded and complex environment in live cells. Here, we develop a two-color fluorescent reporter to directly observe the resection of individual inducible DSB sites within live E. coli cells. Realtime imaging shows that RecBCD during end resection degrades DNA with remarkably high speed (i"1.6 kb/s) and high processivity (>7sim;100 kb). The results show a pronounced asymmetry in the processing of the two DNA ends of a DSB, where much longer stretches of DNA are degraded in the direction of terminus. The microscopy observations are confirmed using quantitative polymerase chain reaction measurements of the DNA degradation. Deletion of the recD gene drastically decreased the length of resection, allowing for recombination with short ectopic plasmid homologies and significantly increasing the efficiency of horizontal gene transfer between strains.We thus visualized and quantified DNA end resection by the RecBCD complex in live cells, recorded DNA-degradation linked to end resection and uncovered a general relationship between the length of end resection and the choice of the homologous recombination template.},
+   author = {Jakub Wiktor and Marit Van Der Does and Lisa Büller and David J. Sherratt and Cees Dekker},
+   doi = {10.1093/NAR/GKX1290},
+   issn = {0305-1048},
+   issue = {4},
+   journal = {Nucleic Acids Research},
+   month = {2},
+   pages = {1821-1833},
+   pmid = {29294118},
+   publisher = {Oxford Academic},
+   title = {Direct observation of end resection by RecBCD during double-stranded DNA break repair in vivo},
+   volume = {46},
+   url = {https://dx.doi.org/10.1093/nar/gkx1290},
+   year = {2018},
+}
+@article{Taylor1992,
+   abstract = {During its unidirectional unwinding of DNA, RecBCD enzyme cuts one DNA strand near a properly oriented Chi site, a hotspot of homologous genetic recombination in Escherichia coli. We report here th...},
+   author = {Andrew F. Taylor and Gerald R. Smith},
+   doi = {10.1073/PNAS.89.12.5226},
+   issn = {00278424},
+   issue = {12},
+   journal = {Proceedings of the National Academy of Sciences},
+   month = {6},
+   pages = {5226-5230},
+   pmid = {1535156},
+   publisher = {Proceedings of the National Academy of Sciences},
+   title = {RecBCD enzyme is altered upon cutting DNA at a chi recombination hotspot.},
+   volume = {89},
+   url = {https://www.pnas.org/doi/abs/10.1073/pnas.89.12.5226},
+   year = {1992},
+}
+@article{Churchill2000,
+   abstract = {Genetic recombination in Escherichia coli is stimulated by the recombination hotspot Chi (χ), a regulatory element that modifies the activities of the RecBCD enzyme and leads to loading of the DNA strand exchange protein, RecA, onto the χ-containing DNA strand. The RecBC enzyme, which lacks the RecD subunit, loads RecA protein constitutively, in a manner that is independent of χ. Using a truncated RecBC enzyme lacking the 30 kDa C-terminal domain of the RecB subunit, we show that this domain is necessary for RecA protein-loading. We propose that this domain harbors a site that interacts with RecA protein, recruiting it to single-stranded DNA during unwinding. This ability of a translocating enzyme to deliver material (RecA protein) to a specific target site (the χ sequence) parallels that of other cellular motor proteins. (C) 2000 Academic Press.},
+   author = {Jason J. Churchill and Stephen C. Kowalczykowski},
+   doi = {10.1006/JMBI.2000.3590},
+   issn = {0022-2836},
+   issue = {3},
+   journal = {Journal of Molecular Biology},
+   keywords = {Chi sequence,Helicase,RecA protein,RecBCD enzyme,Recombination},
+   month = {3},
+   pages = {537-542},
+   pmid = {10731409},
+   publisher = {Academic Press},
+   title = {Identification of the RecA protein-loading domain of RecBCD enzyme},
+   volume = {297},
+   year = {2000},
+}
+@article{Spies2006,
+   abstract = {RecBCD enzyme facilitates loading of RecA protein onto ssDNA produced by its helicase/nuclease activity. This process is essential for RecBCD-mediated homologous recombination. Here, we establish that the C-terminal nuclease domain of the RecB subunit (RecBnuc) forms stable complexes with RecA. Interestingly, RecBnuc also interacts with and loads noncognate DNA strand exchange proteins. Interaction is with a conserved element of the RecA-fold, but because the binding to noncognate proteins decreases in a phylogenetically consistent way, species-specific interactions are also present. RecBnuc does not impede activities of RecA that are important to DNA strand exchange, consistent with its role in targeting of RecA. Modeling predicts the interaction interface for the RecA-RecBCD complex. Because a similar interface is involved in the binding of human Rad51 to the conserved BRC repeat of BRCA2 protein, the RecB-domain may be one of several structural domains that interact with and recruit DNA strand exchange proteins to DNA. ©2006 Elsevier Inc.},
+   author = {Maria Spies and Stephen C. Kowalczykowski},
+   doi = {10.1016/j.molcel.2006.01.007},
+   issn = {10972765},
+   issue = {4},
+   journal = {Molecular Cell},
+   keywords = {DNA},
+   month = {2},
+   pages = {573-580},
+   pmid = {16483938},
+   publisher = {Elsevier},
+   title = {The RecA binding locus of RecBCD is a general domain for recruitment of DNA strand exchange proteins},
+   volume = {21},
+   url = {http://www.cell.com/article/S1097276506000086/fulltext http://www.cell.com/article/S1097276506000086/abstract https://www.cell.com/molecular-cell/abstract/S1097-2765(06)00008-6},
+   year = {2006},
+}
+@article{Taylor1999,
+   abstract = {We report here an unusual mechanism for enzyme regulation: the disassembly of all three subunits of RecBCD enzyme after its interaction with a Chi recombination hot spot. The enzyme, which is essential for the major pathway of recombination in Escherichia coli, acts on linear double-stranded DNA bearing a Chi site to produce single-stranded DNA substrates for strand exchange by RecA protein. We show that after reaction with DNA bearing Chi sites, RecBCD enzyme is inactivated and the three subunits migrate as separate species during glycerol gradient ultracentrifugation or native gel electrophoresis. This Chi-mediated inactivation and disassembly of purified RecBCD enzyme can account for the previously reported Chi-dependent loss of Chi activity in E. coli cells containing broken DNA. Our results support a model of recombination in which Chi regulates one RecBCD enzyme molecule to make a single recombinational exchange ('one enzyme-one exchange' hypothesis).},
+   author = {Taylor A and Smith G},
+   journal = {Genes and development},
+   keywords = {Chi sites,Escherichia coli,[Key Words: RecBCD enzyme,disassembly],genetic recombination},
+   title = {Regulation of homologous recombination: Chi inactivates RecBCD enzyme by disassembly of the three subunits},
+   url = {https://genesdev.cshlp.org/content/13/7/890.short},
+   year = {1999},
+}
+@article{Michel1997,
+   abstract = {We report here that DNA double‐strand breaks (DSBs) form in Escherichia coli upon arrest of replication forks due to a defect in, or the inhibition of, replicative DNA helicases. The formation of D...},
+   author = {Bénédicte Michel and S. Dusko Ehrlich and Marilyne Uzest},
+   doi = {10.1093/EMBOJ/16.2.430},
+   issn = {02614189},
+   issue = {2},
+   journal = {The EMBO Journal},
+   keywords = {DnaB,RecBCD,Rep,helicase,homologous recombination},
+   month = {1},
+   pages = {430-438},
+   pmid = {9029161},
+   publisher = {John Wiley & Sons, LtdChichester, UK},
+   title = {DNA double‐strand breaks caused by replication arrest},
+   volume = {16},
+   url = {https://www.embopress.org/doi/10.1093/emboj/16.2.430},
+   year = {1997},
+}
+@article{Seigneur1998,
+   abstract = {Replication arrest leads to the occurrence of DNA double-stranded breaks (DSB). We studied the mechanism of DSB formation by direct measure of the amount of in vivo linear DNA in Escherichia coli cells that lack the RecBCD recombination complex and by genetic means. The RuvABC proteins, which catalyze migration and cleavage of Holliday junctions, are responsible for the occurrence of DSBs at arrested replication forks. In cells proficient for RecBC, RuvAB is uncoupled from RuvC and DSBs may be prevented. This may be explained if a Holliday junction forms upon replication fork arrest, by annealing of the two nascent strands. RecBCD may act on the double-stranded tail prior to the cleavage of the RuvAB-bound junction by RuvC to rescue the blocked replication fork without breakage.},
+   author = {Marie Seigneur and Vladimir Bidnenko and S. Dusko Ehrlich and Bénédicte Michel},
+   doi = {10.1016/S0092-8674(00)81772-9},
+   issn = {00928674},
+   issue = {3},
+   journal = {Cell},
+   month = {10},
+   pages = {419-430},
+   pmid = {9814711},
+   publisher = {Elsevier B.V.},
+   title = {RuvAB acts at arrested replication forks},
+   volume = {95},
+   url = {http://www.cell.com/article/S0092867400817729/fulltext http://www.cell.com/article/S0092867400817729/abstract https://www.cell.com/cell/abstract/S0092-8674(00)81772-9},
+   year = {1998},
+}
+@article{Michel2001,
+   abstract = {DNA synthesis is an accurate and very processive phenomenon; nevertheless, replication fork progression on chromosomes can be impeded by DNA lesions, DNA secondary structures, or DNA-bound proteins...},
+   author = {B. Michel and M. J. Flores and E. Viguera and G. Grompone and M. Seigneur and V. Bidnenko},
+   doi = {10.1073/PNAS.111008798},
+   issn = {00278424},
+   issue = {15},
+   journal = {Proceedings of the National Academy of Sciences},
+   month = {7},
+   pages = {8181-8188},
+   pmid = {11459951},
+   publisher = {The National Academy of Sciences},
+   title = {Rescue of arrested replication forks by homologous recombination},
+   volume = {98},
+   url = {https://www.pnas.org/doi/abs/10.1073/pnas.111008798},
+   year = {2001},
+}
+@article{Amarh2018,
+   abstract = {Chromosomal replication is the major source of spontaneous DNA double-strand breaks (DSBs) in living cells. Repair of these DSBs is essential for cell viability, and accuracy of repair is critical to avoid chromosomal rearrangements. Repair of replication-dependent DSBs occurs primarily by homologous recombination with a sister chromosome. However, this reaction has never been visualized at a defined chromosomal locus, so little is known about its spatial or temporal dynamics. Repair of a replication-independent DSB generated in Escherichia coli by a rare-cutting endonuclease leads to the formation of a bundle of RecA filaments. In this study, we show that in contrast, repair of a replication-dependent DSB involves a transient RecA focus localized in the central region of the cell in which the DNA is replicated. The recombining loci remain centrally located with restricted movement before segregating with little extension to the period of postreplicative sister-chromosome cohesion. The spatial and temporal efficiency of this reaction is remarkable.},
+   author = {Vincent Amarh and Martin A. White and David R.F. Leach},
+   doi = {10.1083/JCB.201803020},
+   issn = {0021-9525},
+   issue = {7},
+   journal = {Journal of Cell Biology},
+   keywords = {chromosomes,dna,double-stranded dna breaks,recombination, genetic},
+   month = {7},
+   pages = {2299-2307},
+   pmid = {29789437},
+   publisher = {The Rockefeller University Press},
+   title = {Dynamics of RecA-mediated repair of replication-dependent DNA breaks},
+   volume = {217},
+   url = {https://doi.org/10.1083/jcb.201803020},
+   year = {2018},
+}
